cmake_minimum_required(VERSION 3.30)
project(NeetCodeRoadmap)

set(CMAKE_CXX_STANDARD 20)

add_executable(contains_duplicate "Arrays_and_Hashing/217. Contains Duplicate.cpp")
add_executable(Valid_Anagram "Arrays_and_Hashing/Valid Anagram.cpp")
add_executable(Two_Sum "Arrays_and_Hashing/1. Two Sum.cpp")
add_executable(Group_Anagrams "Arrays_and_Hashing/Group Anagrams.cpp")
add_executable(Top_K_Frequent_Elements "Arrays_and_Hashing/Top K Frequent Elements.cpp")
add_executable(Encode_and_Decode "Arrays_and_Hashing/testing random problems.cpp")
add_executable(Combination_Sum "Backtracking/Combination Sum.cpp")
add_executable(subsets "Backtracking/Subsets.cpp")
add_executable(playing testing.cpp)
add_executable(Combinatoin_Sum_II "Backtracking/Combination Sum II.cpp")
add_executable(Permutations "Backtracking/Permutations.cpp")
add_executable(optimized_permutation "Backtracking/Permutations Optimized Solution.cpp")
add_executable(Longest_Consecutive_Sequence "Arrays_and_Hashing/Longest Consecutive Sequence.cpp")
add_executable(Product_Except_Self "Arrays_and_Hashing/Product Of Array Except Self.cpp")
add_executable(Valid_Sudoku "Arrays_and_Hashing/Valid Sudoku.cpp")
add_executable(valid_palindrome "Two Pointers/Valid Palindrome.cpp")
add_executable(unique_paths "2-D Dynamic Programming/Unique Paths.cpp")
add_executable(two_sum "Two Pointers/Two Sum II - Input Array Is Sorted.cpp")
add_executable(longest_common_subsequence "2-D Dynamic Programming/Longest Common Subsequence.cpp")
add_executable(3_sums "Two Pointers/3 Sums.cpp")
add_executable(container_with_most_water "Two Pointers/Container With Most Water.cpp")
add_executable(Trapping_Rain_Water "Two Pointers/Trapping Rain Water.cpp")
add_executable(Valid_Parentheses "Stack/Valid Parentheses.cpp")
add_executable(Min_Stack "Stack/Min Stack.cpp")
add_executable(Evaluate_Polish_Notation "Stack/Evaluate Reverse Polish Notation.cpp")
add_executable(Generate_Parentheses "Stack/Generate Parentheses.cpp")
add_executable(Daily_Temperatures "Stack/Daily Temperatures.cpp")
add_executable(Car_Fleet "Stack/Car Fleet.cpp")
add_executable(Largest_Rectangle_In_Histogram "Stack/Largest Rectangle In Histogram.cpp")
add_executable(Binary_Search "Binary Search/Binary Search.cpp")
add_executable(Search_a_2D_Matrix "Binary Search/Search a 2D Matrix.cpp")
add_executable(Find_Minimum "Binary Search/Find Minimum In Rotated Sorted Array.cpp")
add_executable(Koko_Eating_Bananas "Binary Search/Koko Eating Bananas.cpp")
add_executable(Search_In_Rotated_Sorted_Array "Binary Search/Search In Rotated Sorted Array.cpp")
add_executable(Median_Of_2_Sorted_Arrays "Binary Search/Median Of Two Sorted Arrays.cpp")
add_executable(Time_Based_Store "Binary Search/Time Based Key-Value Store.cpp")
add_executable(__Longest_Increasing_Subsequence "1-D Dynamic Programming/Longest Increasing Subsequence.cpp")
add_executable(Coin_Change "1-D Dynamic Programming/Coin Change.cpp")
add_executable(Best_Time "Sliding Window/Best Time to Buy and Sell Stock.cpp")
add_executable(Longest_Substring "Sliding Window/Longest Substring Without Repeating Characters.cpp")
